devops/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: __NameDeploy__
  namespace: __Namespace__
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: __NameDeploy__.__Namespace__.okedev.linktic.co
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: __NameDeploy__
            port:
              number: 8080
